clusters/production/portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  labels:
    app: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      # Block API token and kernel syscalls
      automountServiceAccountToken: false
      securityContext:
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: portfolio
          image: ghcr.io/jonahgcarpenter/portfolio/portfolio:v2.0.1
          ports:
            - containerPort: 8080
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL

          # Resouce Limits
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"

          # Mounting the ConfigMap as a directory of files
          volumeMounts:
            - name: content-volume
              mountPath: /app/data
              readOnly: true

      volumes:
        - name: content-volume
          configMap:
            name: portfolio-content
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-tunnel
  labels:
    app: portfolio-tunnel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-tunnel
  template:
    metadata:
      labels:
        app: portfolio-tunnel
    spec:
      # Block API token and kernel syscalls
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault

      containers:
        - name: cloudflared
          image: cloudflare/cloudflared:2026.6.1
          args:
            - tunnel
            - --no-autoupdate
            - run

          # Resouce Limits
          resources:
            requests:
              cpu: "10m"
              memory: "32Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"

          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 65532
            capabilities:
              drop:
                - ALL
